# cannyedge-boinc

./: .gitignore  CMakeLists.txt  Makefile  Makefile_android  README.md  build_android_arm.sh  build_android_arm64.sh  cannyedge_app.cpp  cannyedge_app2.cpp  cannyedge_assimilator.cpp  cannyedge_work_generator.cpp  cannyedgeapp.cpp
contrib/: CannyEdgeDetector.cpp  CannyEdgeDetector.h  bmp.c
